<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Antall regnestykker preferanse -->
    <PreferenceCategory app:title="@string/velgAntall">
        <ListPreference
            android:key="RUNDER"
            android:title="@string/antallStykker"
            android:defaultValue="5"
            android:dialogTitle="Velg antall regnestykker"
            android:entries="@array/antall_regnestykker"
            android:entryValues="@array/antall_regnestykker"/>
    </PreferenceCategory>


    <!-- Språk preferanse -->
    <PreferenceCategory app:title="@string/velgSprak">
        <ListPreference
            android:key="language"
            android:title="@string/velgSprak"
            android:defaultValue="nb"
            android:entries="@array/sprak_entries"
            android:entryValues="@array/sprak_values"
            android:dialogTitle="Velg språk" />
    </PreferenceCategory>


</PreferenceScreen>
